--- a/MyWebApp/templates/registration.html
+++ b/MyWebApp/templates/registration.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href="/static/registration_style.css" />
     <title>Registration</title>
 </head>
 <body>
+	<img src="/images/рисунок.png" alt="картинка" width="200" />
     <form action="" method="post">
       <p>
     <label for="name">Your name:</label>
@@ -22,6 +24,5 @@
 	    <input type="submit" value="Sign In">
 	</p>
     </form>
-
 </body>
 </html>
