--- a/MyWebApp/templates/login.html
+++ b/MyWebApp/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link href="/static/style.css" rel="stylesheet" />  
 </head>
 <body>
     <form action="" method="post">
