--- a/MyWebApp/templates/wrong_requests.html
+++ b/MyWebApp/templates/wrong_requests.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/style.css">
     <title>Title</title>
     <form action="" method="post">
 
